<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GradeStatisticsWindow</class>
 <widget class="QWidget" name="GradeStatisticsWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>780</width>
    <height>530</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>780</width>
    <height>500</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QFrame" name="mainFrame">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <property name="spacing">
       <number>-1</number>
      </property>
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QFrame" name="selectInfoLabel">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
          <width>0</width>
          <height>80</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
          <height>80</height>
         </size>
        </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
        </property>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <property name="leftMargin">
          <number>0</number>
         </property>
         <property name="topMargin">
          <number>10</number>
         </property>
         <property name="rightMargin">
          <number>0</number>
         </property>
         <property name="bottomMargin">
          <number>0</number>
         </property>
         <item>
          <widget class="QFrame" name="leftUpFrame">
           <property name="minimumSize">
            <size>
             <width>740</width>
             <height>80</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>560</width>
             <height>80</height>
            </size>
           </property>
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
           </property>
           <property name="frameShadow">
            <enum>QFrame::Raised</enum>
           </property>
           <widget class="QComboBox" name="teacherComboBox">
            <property name="geometry">
             <rect>
              <x>260</x>
              <y>35</y>
              <width>271</width>
              <height>21</height>
             </rect>
            </property>
            <item>
             <property name="text">
              <string>teach</string>
             </property>
            </item>
           </widget>
           <widget class="QLabel" name="nameLabel">
            <property name="geometry">
             <rect>
              <x>20</x>
              <y>10</y>
              <width>401</width>
              <height>21</height>
             </rect>
            </property>
            <property name="styleSheet">
             <string notr="true">font-weight: bold</string>
            </property>
            <property name="text">
             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700;&quot;&gt;Статистика за:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
           <widget class="QComboBox" name="categoryComboBox">
            <property name="geometry">
             <rect>
              <x>20</x>
              <y>35</y>
              <width>231</width>
              <height>20</height>
             </rect>
            </property>
            <item>
             <property name="text">
              <string>Оберіть категорію викладача</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Спеціаліст першої категорії</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Спеціаліст другої категорії</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Спеціаліст вищої категорії</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Спеціаліст</string>
             </property>
            </item>
           </widget>
           <widget class="QComboBox" name="subjectComboBox">
            <property name="geometry">
             <rect>
              <x>540</x>
              <y>35</y>
              <width>181</width>
              <height>21</height>
             </rect>
            </property>
            <item>
             <property name="text">
              <string>subject</string>
             </property>
            </item>
           </widget>
          </widget>
         </item>
         <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeType">
            <enum>QSizePolicy::Expanding</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
             <height>20</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </widget>
      </item>
      <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeType">
         <enum>QSizePolicy::Fixed</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>0</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <layout class="QHBoxLayout" name="specialChart"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
